--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,8 @@
-/* Global styles ============= */
+.logo {
+  width: 50px;
+}
+
+/* Global styles =============
 html,
 body {
   width: 100%;
@@ -313,5 +317,5 @@ footer ul li a:hover, footer ul li a:focus, footer ul li a:active, footer ul li 
 .btn-xl {
   font-size: 11px;
   padding: 15px 45px;
-}
+} */
 
